# Edge-Flow-Infra

./: .clang-format  .env.example  .gitignore  README.md  docker-compose.yml  readme.md
cloudflare/: edge-infra-worker.js
docker/scripts/: llm_docker_into.sh  llm_docker_run.sh
docs/: deploy-vercel-cloudflare.md
gateway/: README.md  requirements.txt
gateway/app/: __init__.py  audio_utils.py  main.py  openai_compat.py  unit_manager_client.py
hybrid-comm/include/: pzmq.hpp  pzmq_data.h
hybrid-comm/src/: pzmq_data.cpp
infra-controller/: CMakeLists.txt
infra-controller/include/: NodeJobQueue.h  NodeRuntimeUtil.h  StackFlow.h  StackFlowUtil.h  channel.h
infra-controller/src/: StackFlow.cpp  StackFlowUtil.cpp  channel.cpp
network/include/network/: EventLoopThread.h  EventLoopThreadPool.h
network/src/: EventLoopThread.cc  EventLoopThreadPool.cc  Poller.cc
node/asr/: CMakeLists.txt
node/asr/src/: asr_engine.cpp  asr_engine.h  main.cpp
node/echo/: CMakeLists.txt
node/echo/src/: main.cpp
node/llm/: CMakeLists.txt
node/llm/src/: main.cpp  rkllm_engine.cpp  rkllm_engine.h
node/test/: CMakeLists.txt
node/test/src/: main.cpp
node/tts/: CMakeLists.txt
node/tts/src/: main.cpp  tts_engine.cpp  tts_engine.h
sample/: CMakeLists.txt  pub.cc  pz_rpc_call.cc  pz_rpc_server.cc  rpc_call.cc  rpc_server.cc  stress.py  sub.cc  test.py  test_asr.py  test_echo.py  test_rkllm.py  test_tts.py  voice_chat.py
scripts/: README.md  runtime_lib.sh  runtime_supervisor.sh  smoke_test_gateway.sh  start_runtime.sh  status_runtime.sh  stop_runtime.sh
single_node_demo/rkllm-clean-demo/: CMakeLists.txt
single_node_demo/rkllm-clean-demo/src/: main.cpp
unit-manager/: CMakeLists.txt  master_config.json
unit-manager/include/: all.h  remote_action.h  remote_server.h  session.h  unit_data.h  zmq_bus.h
unit-manager/src/: config.cpp  main.cpp  remote_action.cpp  remote_server.cpp  tcp_comm.cpp  unit_data.cpp  zmq_bus.cpp
utils/: sample_log.h
web/: app.js  index.html  readme.md  styles.css
web-vue/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
web-vue/src/: App.vue
web-vue/src/api/: gateway.js  sse.js
web-vue/src/assets/: styles.css
web-vue/src/components/: ConnectionBar.vue  ModelStatusRow.vue  TabsNav.vue  Toast.vue  TopBar.vue
web-vue/src/composables/: useAudioRecorder.js  useChat.js  useGatewayStatus.js  useToast.js
web-vue/src/panels/: AsrPanel.vue  ChatPanel.vue  DocsPanel.vue  StatusPanel.vue  TtsPanel.vue  VoicePanel.vue
web-vue/src/utils/: audioWav.js  base64.js  file.js
